--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"fabric": "^1.7.22",
 		"konva": "^2.1.7",
 		"object-assign": "^4.1.1",
+		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
 		"react-konva": "^1.7.12",
